--- a/index.html
+++ b/index.html
@@ -41,23 +41,17 @@ Licence URI: https://www.os-templates.com/template-terms
               <li class="active"><a href="index.html">Home</a></li>
               <li><a class="drop" href="#">Products</a>
                 <ul>
-                  <li><a href="pages/upper damage.html">upper damage</a></li>
-                  <li><a href="pages/chassis damage.html">chassis damage</a></li>
+                  <li><a href="http://52.14.113.76:5000/">upper damage</a></li>
+                  <li><a href="chassis_soon.html">chassis damage</a></li>
                 </ul>
               </li>
-              <li><a class="drop" href="#">Dropdown</a>
+               <li><a class="drop" href="#">Gallery</a>
                 <ul>
-                  <li><a href="#">coming soon</a></li>
-                  <li><a class="drop" href="#">coming soon</a>
-                    <ul>
-                      <li><a href="#">coming soon</a></li>
-                      <li><a href="#">coming soon</a></li>
-                      <li><a href="#">comin soon</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">coming soon</a></li>
+                  <li><a href="upper_gallery.html">Upper vehicle damage photos</a></li>
+                  <li><a href="chassis_soon.html">Chassis damage photos</a></li>
                 </ul>
                 </ul>
+
 
     <!-- ################################################################################################ -->
     </nav>
@@ -104,7 +98,7 @@ Licence URI: https://www.os-templates.com/template-terms
                         <article><i class="image-cropper"><img src="images/demo/backgrounds/img1.png" class="profile-pic"></i>
                            <h6 class="heading">Upper body</h6>
                            <p>Detect Upper Body Damage <br> Enter image, the Neural Network<br> will auto detect scratches and bumps</p>
-                            <footer><a class="btn" href="#">Try It</a></footer>
+                            <footer><a class="btn" href="http://52.14.113.76:5000/">Try It</a></footer>
                         </article>
                     </li>
                  
@@ -112,7 +106,7 @@ Licence URI: https://www.os-templates.com/template-terms
                         <article><i class="image-cropper2"><img src="images/demo/backgrounds/chas.jpg" class="profile-pic2"></i>
                             <h6 class="heading">chassis</h6>
                             <p>Detect Chassis Damage <br>Enter image, the Neural Network<br> will auto detect ruptures and oil leaks </p>
-                            <footer><a class="btn" href="#">Try It</a></footer>
+                            <footer><a class="btn" href="chassis_soon.html">Try It</a></footer>
                         </article>
                     </li>
                 </ul> 
